# Python-Postgres-Backend

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
app/: main.py  server.py
app/dao/: __init__.py  categories_dao.py  customers_dao.py  orders_dao.py  parts_dao.py  products_dao.py  students_dao.py  supplier_dao.py  supplies_dao.py
app/routes/: __init__.py  auth.py  categories.py  customers.py  orders.py  parts.py  products.py  students.py  supplier.py  supplies.py
db/: schema.sql
github/actions/setup/: action.yaml
